--- a/eupi-ppt-viewer/src/main/res/values/strings.xml
+++ b/eupi-ppt-viewer/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">wave-ppt</string>
+    <string name="title_activity_viewer">ViewerActivity</string>
 </resources>
