[Refactor] Rename Project: xml files

--- a/eupi-pdf-viewer/src/main/res/values/strings.xml
+++ b/eupi-pdf-viewer/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">wave-ppt</string>
+    <string name="app_name">wave-pdf</string>
     <string name="title_activity_viewer">ViewerActivity</string>
 </resources>
